fix: css styles

--- a/Khai demo/Views/Home.cshtml
+++ b/Khai demo/Views/Home.cshtml
@@ -3,10 +3,10 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.Home>
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @{
-	Layout = "_Layout.cshtml";
+    Layout = "_Layout.cshtml";
 }
 
-<div clas="home-block">
+<div class="home-block">
     <h1>@Model.Title</h1>
     <p class="home-block__description">@Model.Description</p>
 
